# checkers

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Justfile  README.md  pyproject.toml  setup.py
csrc/: CMakeLists.txt
csrc/ext/: CMakeLists.txt  bindings.cpp  module.cpp
csrc/generate/: CMakeLists.txt  main.cpp
csrc/render/: CMakeLists.txt  main.cpp
csrc/shared/: CMakeLists.txt  board.h  chinese_checkers.cpp  chinese_checkers.h  constants.h
env/: pyproject.toml
env/csrc/ext/: bindings.cpp
env/csrc/generate/: main.cpp
env/csrc/shared/: board.h
env/scripts/: validate_moves.py
env/src/chinese_checkers_ext/: visualize.py
env/tests/: test_chinese_checkers.py
src/chinese_checkers_ext/: __init__.py  visualize.py
tests/: benchmark.py
