[build-system]
requires = ["setuptools", "torch>=2.1.0", "numpy<2.0.0", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "chinese_checkers_ext"
version = "0.1.0"
authors = [
    {name = "Rachit Singh", email = "rachitsingh@outlook.com"},
]
description = "A Chinese checkers simulator"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1.0",
  "setuptools>=61.0.0",
  "numpy<2.0.0",
  "pybind11>=2.12",
]

# for now just use CPU version
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]